<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/green_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:text="@string/SnakePit"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnNovoJogo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="OnClickbtnNovoJogo"
            android:text="@string/NovoJogo" />

        <Button
            android:id="@+id/btnScore"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="OnClickbtnScore"
            android:text="@string/Score" />

        <Button
            android:id="@+id/btnOpcoes"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="OnClickbtnOpcoes"
            android:text="@string/opcoes" />

        <Button
            android:id="@+id/BtnInstrucoes"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="OnClickbtnInstrucoes"
            android:text="@string/instrucoes" />

        <Button
            android:id="@+id/btnCredits"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="OnClickbtnCreditos"
            android:text="@string/credits" />

        <Button
            android:id="@+id/btnSair"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="OnClickbtnSair"
            android:text="@string/sair" />
    </LinearLayout>

</ScrollView>